--- a/index.html
+++ b/index.html
@@ -4,8 +4,7 @@
 <head>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet"
-        integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous">
+    <link href="../../global_assets/css/bootstrap.min.css" rel="stylesheet">
     <link rel="stylesheet" href="asstes/css/style.css" />
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.1/css/all.min.css"
         integrity="sha512-DTOQO9RWCH3ppGqcWaEA1BIZOC6xxalwEsw9c2QQeAIftl+Vegovlnee1c9QX4TctnWMn13TZye+giMm8e2LwA=="
@@ -16,7 +15,7 @@
 
 <body>
     <div class="container">
-        <div class="row mt-5 justify-content-evenly">
+        <div class="row mt-5">
             <div class="col-4">
                 <div class="card shadow rounded" style="width: 18rem;">
                     <img src="asstes/images/bg.jpg" class="card-img-top" alt="...">
